<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="14dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        android:orientation="horizontal"
        android:layout_margin="14dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="14dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="138dp"
                android:layout_height="100dp"
                android:background="@drawable/car" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Lorem ipsum" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5855" />
            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="45" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/road"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    tools:text="City" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/leave"
                     />
                <TextView
                    android:id="@+id/leaveDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="25.01.2020" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/arrive"
                    />
                <TextView
                    android:id="@+id/arriveDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="25.01.2020" />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/deleteReis"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button2"

            android:text="@string/deletr_reis"
            android:textColor="@color/black"
            />

</LinearLayout>
    </androidx.cardview.widget.CardView>





</LinearLayout>

